# car_manager

./: CMakeLists.txt  README.md  arvore.c  arvore.h  carro.h  lista.c  lista.h  lista_ano.c  lista_ano.h  p1.c  utils.c
data/: cars.csv
include/: arvore.h  bst_filter.h  car.h  list.h  mil_tree.h  price_tree.h  tree.h  year_list.h
src/: MilTree.c  list.c  main.c  mil_tree.c  p1.c  p2.c  price_tree.c  tree.c  utils.c  year_list.c
src/tree/: bst_filter.c  bst_mileage.c  bst_price.c
